Improve html and add some css

--- a/app/dataeng_01.css
+++ b/app/dataeng_01.css
@@ -14,3 +14,11 @@ main, header {
     width: 700px;
     margin: 0 auto;
 }
+
+article {
+    padding: 0 20px;
+}
+
+main {
+    margin-bottom: 40px;
+}
