--- a/app/dataeng_01.css
+++ b/app/dataeng_01.css
@@ -1,4 +1,8 @@
 body {
+    font-family: Georgia, serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
     font-family: Helvetica, "Liberation Sans", Arial, sans-serif; 
 }
 
