--- a/app/dataeng_01.css
+++ b/app/dataeng_01.css
@@ -40,3 +40,10 @@ hr {
     background: #aaa;
     margin-top: 30px;
 }
+
+article {
+    background: #fff;
+    border: 2px;
+    border: 3px solid #ccc;
+    margin: 20px 30px 20px 50px;
+}
